fixed next game line-up column spacing

--- a/src/components/NextGame.css
+++ b/src/components/NextGame.css
@@ -11,7 +11,8 @@
 .batting-line-up-container{
     columns: 2;
     box-shadow: 0 2px 5px 3px;
-    width: 60%;
+    gap: 1em;
+    width: 70%;
     padding-left: 2em;
     margin:auto;
     margin-bottom: 1em;
