--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -7,6 +7,7 @@
 .player-card > button{
     padding: .25em;
     border-radius: 5px;
+    margin-right: 15px;
 }
 .gender-icon-male{
     position: absolute;
